--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "prisma": "^5.20.0"
+    "pdf-lib": "^1.17.1",
+    "prisma": "^5.20.0",
+    "qrcode": "^1.5.4"
   }
 }
